--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0-alpha02'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
 
+    implementation("androidx.cardview:cardview:1.0.0")
+    implementation 'com.google.android.libraries.places:places:2.5.0'
+
+
 
     implementation 'com.karumi:dexter:6.2.3'
 }
