--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ android {
     compileSdkVersion 31
     buildToolsVersion "30.0.2"
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     defaultConfig {
         configurations.all {
             resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
@@ -52,7 +56,7 @@ dependencies {
     implementation("androidx.cardview:cardview:1.0.0")
     implementation 'com.google.android.libraries.places:places:2.5.0'
 
-
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha01'
 
     implementation 'com.karumi:dexter:6.2.3'
 }
