--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled = true
         configurations.all {
             resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
         }
@@ -57,6 +58,12 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.5.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha01'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
+    implementation 'androidx.fragment:fragment-ktx:1.4.0'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
 
     implementation 'com.karumi:dexter:6.2.3'
 }
